fixed overflowing div

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     overflow: scroll;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 #nav {
@@ -69,6 +70,25 @@ body {
     background: linear-gradient(180deg, #545E59 100%, #667761 100%);
     z-index: -1;
     padding-top:200px;
+}
+#writings h1 {
+    margin: 0;
+}
+.and-line {
+    padding-left: 10px;
+    /* text-indent: -60px; */
+    margin-top: 10px;
+    margin-right: 200px;
+    font-size: 64px;
+    float: right;
+}
+.and-line .and {
+    position: relative;
+    top: 0.50em;
+    left: 3px;
+    font-size: 55px;
+    line-height: 50px;
+    font-weight: bold;
 }
 #writings {
     width: 50%;
